kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/dataqa-web-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-dataqa-web
spec:
  tls:
  - hosts:
    - dataqa.example.com
    secretName: dataqa.example.com
