kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/hca-notion-sync-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-hca-notion-sync
spec:
  template:
    spec:
      containers:
        - name: hca-notion-sync
          resources:
            limits:
              memory: 4Gi
            requests:
              memory: 2Gi
