kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/lookup-server-cdc-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-lookup-server-cdc
spec:
  template:
    spec:
      containers:
        - name: lookup-server-cdc
          resources:
            limits:
              memory: 3Gi
            requests:
              memory: 2Gi
