kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/ml-server-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ml-server
spec:
  tls:
  - hosts:
    - mls.prod.example.pro
    secretName: mls.prod.example.pro
