kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/ml-server-workers-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-ml-server-workers
spec:
  template:
    spec:
      containers:
        - name: ml-server-workers
          resources:
            limits:
              memory: 8Gi
            requests:
              memory: 2Gi
