kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/node-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-node
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: example-node
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: api.example.com
    http:
      paths:
      - backend:
          service:
            name: example-node
            port:
              number: 80
        path: /node-api
        pathType: ImplementationSpecific
      - backend:
          service:
            name: example-node
            port:
              number: 80
        path: /socket.io
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - example.com
    secretName: example-com-tls
  - hosts:
    - api.example.com
    secretName: api-example-com-tls
