kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/shopify-integration2-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-shopify-integration2
spec:
  template:
    spec:
      containers:
        - name: shopify-integration2
          env:
            - name: SHOPIFY_INTEGRATION__KAFKA__RETRY_DELAY_SECONDS
              value: "3600"
          resources:
            limits:
              memory: 4Gi
            requests:
              cpu: 50m
              memory: 2Gi
