kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/subscription-updater-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-subscription-updater
spec:
  template:
    spec:
      containers:
        - name: subscription-updater
          resources:
            requests:
              memory: 400Mi
