kustomizer/tests/kustomizer/testdata/realistic/example-com/envs/production/vrm-search-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-vrm-search
spec:
  template:
    spec:
      containers:
        - name: vrm-search
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 2Gi
